# WebAssembly-JRPG

./: Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  web.config  webpack.config.js
src/: lib.rs
src/game/: mod.rs  party_macros.rs
src/game/animation/: character.rs  enemy.rs  mod.rs
src/game/battle/: character.rs  enemy.rs  mod.rs  print_damage.rs  state.rs
src/game/data/: battle_actions.rs  battle_menus.rs  characters.rs  enemies.rs  enemy_formations.rs  maps.rs  menus.rs  mod.rs  npcs.rs
src/game/map/: mod.rs  npc.rs  player.rs  tile.rs  tilegrid.rs
src/game/menu/: click_event.rs  container.rs  font.rs  item.rs  mod.rs  notification.rs  textbox.rs
src/game/transition/: mod.rs
src/webgl/: audio.rs  gl_setup.rs  keyboard.rs  mod.rs  shader_program.rs  shaders.rs
