[package]
name = "jrpg-wasm-engine"
version = "0.1.0"
authors = ["Pyry Vähäkangas"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "=0.1.5"
js-sys = "0.3.19"
lazy_static = "1.3.0"
wasm-bindgen = "0.2.44"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'EventListener',
  'HtmlAudioElement',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'KeyboardEvent',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'Window'
]
